project-management-app/src/app/shared/components/header/header/header.component.scss
@import "variables";
@import "mixins";

.header {
  position: sticky;
  top: 0;
  left: 0;
  z-index: 5000;
  padding: 0 3rem;
  border-bottom: 2px solid $color-white-darken;
  transition: all 0.3s ease-in-out;
  background-color: $form-bg;
  display: flex;
  gap: 2rem;
  align-items: center;
  width: 100%;
  height: 9rem;
  font-size: 2.4rem;
  font-weight: 300;

  &.sticky {
    background-color: $color-white-darken;
    box-shadow: 0px 4px 6px 2px $shadow-color;
    height: 7rem;
  }
}

::ng-deep {
  .slide-toggle.mat-slide-toggle {
    @include btn-shadow-style;

    background-color: $theme-primary;
    color: $font-white;
    padding: 1rem 2rem;
    height: 5rem;
    display: flex;
    align-items: center;
    border-radius: 5rem;

    &.mat-checked .mat-slide-toggle-bar {
      background-color: $theme-accent;
    }

    &.mat-checked .mat-slide-toggle-thumb {
      background-color: $color-white-darken;
    }

    & .mat-slide-toggle-bar {
      background-color: $color-white-darken;
    }

    & .mat-slide-toggle-thumb {
      background-color: $theme-accent;
    }
  }
}

